# grupo33

./: .gitignore  README.md  main.py
admin/: .env.example  pyproject.toml
admin/src/core/: database.py  seeds.py
admin/src/core/auth/: __init__.py  user.py
admin/src/core/configuration/: __init__.py  configuration.py
admin/src/core/insts/: __init__.py  institution.py
admin/src/core/service_requests/: __init__.py  service_request.py
admin/src/core/services/: __init__.py  service.py
admin/src/core/validations/auth/: login_form.py
admin/src/core/validations/configuration/: configuration_update.py
admin/src/core/validations/intitutions/: institution_store.py
admin/src/core/validations/service_requests/: service_request.py
admin/src/core/validations/services/: service.py
admin/src/core/validations/users/: user_store.py  user_update.py
admin/src/web/: __init__.py  commands.py  config.py  mail.py  oauth_config.py  routes.py
admin/src/web/api/: auth.py  institution.py  profile.py  service.py  service_request.py  type_of_services.py
admin/src/web/controllers/: auth.py  configuration.py  dashboard.py  institution.py  service.py  service_request.py  user.py
admin/src/web/errors/: __init__.py  error.py
admin/src/web/helpers/: activated.py  auth.py  maintenance.py  permission.py
admin/src/web/schemas/: institution.py  profile.py  service.py  service_request.py
admin/src/web/templates/: dashboard.html  error.html  home.html
admin/src/web/templates/auth/: login.html  register.html
admin/static/: style.css
admin/tests/: test_web.py
(+61 files in other folders)
